--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,95 @@
+
+body {margin: 0;}
+
 /*
 ---------------------------------------------------------------------------------------------------------
 RESPONSIVE BAR con GRADIENTE
 ---------------------------------------------------------------------------------------------------------
-@import "https://fonts.googleapis.com/css?family=Lato:300";
 */
+body {margin:0;}
 
-
-.gradientes {
-  position: relative;
-  height: 5vh;
-  border-bottom: solid 5px white;
+.topnav {
+  overflow: hidden;
+  background: linear-gradient(to bottom, #fc5500 20%,#fc730a 100%);
 }
-/*
-.gradientes:before, .gradientes:after {
-  position: absolute;
+
+.topnav a {
+  float: left;
   display: block;
-  top: 50%;
-  left: 0;
-  right: 0;
-  max-width: 600px;
-  margin: 0 auto;
-}
-.gradientes:before {
-  content: "Good news, everyone!";
-  font-size: 46px;
-  line-height: 60px;
-  margin-top: -40px;
-}
-.gradientes:after {
-  content: "I've taught the toaster to feel love!";
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 20px;
-}
-.gradientes--intro:before {
-  content: "Gradient backgrounds";
-}
-.gradientes--intro:after {
-  content: "A curated collection";
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.gradientes--intro {
-  background: linear-gradient(135deg, #4567b2 20%, #8ab9ff 80%);
-}
-*/
-
-.gradientes--barra {
-  background: linear-gradient(135deg, #ff6500 20%, #ff7500 80%);
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-
-body {margin: 0;}
-
-ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+.topnav .icon {
+  display: none;
 }
 
-ul.topnav li {float: left;}
-
-ul.topnav li a {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
     display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  }
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 
-ul.topnav li a.active {background-color: #4CAF50;}
-
-ul.topnav li.right {float: right;}
-
-@media screen and (max-width: 600px){
-    ul.topnav li.right, 
-    ul.topnav li {float: none;}
 }
+
 /*
 ---------------------------------------------------------------------------------------------------------
 Texto estilo
 ---------------------------------------------------------------------------------------------------------
 */
 
+.cuerpo{
+    padding: 30px;
+}
 
+/*
+.head {
+  background: #cd679a;
+  padding: 40px 0;
+  text-align: center;
+}
+.head h1 {
+  display: inline-block;
+  font-family: 'Slabo 27px', serif;
+  font-size: 64px;
+  color: #fff;
+  margin: 0;
+  position: relative;
+  top: -40px;
+}
+.head h2 {
+  font-family: 'Ubuntu', sans-serif;
+  color: #fff;
+  margin: 0 0 20px 0;
+}
+*/
 
-
-
-
+.footnote{
+    padding: 15px;
+}
 
 
 /*
@@ -99,3 +98,36 @@ Otros
 ---------------------------------------------------------------------------------------------------------
 */
 
+
+/*
+---------------------------------------------------------------------------------------------------------
+Social media buttons
+---------------------------------------------------------------------------------------------------------
+*/
+.ex1, .ex3 {
+  padding: 60px 0;
+  text-align: center;
+  background: #fff;
+}
+.ex1 i, .ex3 i {
+  margin: 0 20px;
+  color: #333;
+  cursor: pointer;
+}
+
+.ex1 i:hover {
+  color: #fc730a;
+  -moz-transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  -o-transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  -webkit-transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  -moz-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+
+a, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color: inherit;
+}
