--- a/styles_clean.css
+++ b/styles_clean.css
@@ -5,7 +5,7 @@ body {margin: 0;}
 ---------------------------------------------------------------------------------------------------------
 RESPONSIVE BAR
 ---------------------------------------------------------------------------------------------------------
-
+*/
 
 /*TOP Navbar fixed that moves*/
 
