--- a/styles_clean.css
+++ b/styles_clean.css
@@ -4,41 +4,58 @@ body {margin: 0;}
 .tituloLogo{
 	background-color: #ffa751;
 	margin: 0px;
-	padding: 20px;
-	height:400px;
+	padding-top: 250px;
+	padding-bottom: 250px;
+	padding-left: 250px;
+	padding-right: 250px;
+	height:1100px;
 	width: 100%;  
 }
 
 .centrado{
     margin: auto;
-    width: 20%;
+    width: 37%;
 	height:100%;
 }
 
 .logo{
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	height:100%;
 	float: middle;
 
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1500px) {
 	.centrado{
-		margin: auto;
-		width: 40%;
-		height:100%;
+		width: 350px;
+		height:350px;
 	}
-}
-@media screen and (max-width: 777px) {
-	.centrado{
-		margin: auto;
-		width: 50%;
-		height:100%;
+	
+	.tituloLogo{
+		padding-left: 150px;
+		width: 100%;  
 	}
-}
+	
+	.logo{
 
+	width:100%;
+	float: middle;
+
+}
+}
+@media screen and (max-width: 500px) {
+	.centrado{
+		width: 350px;
+		height:350px;
+	}
+	
+	.tituloLogo{
+		padding-left: 10px;
+		width: 100%;  
+	}
+}
+/*
 @media screen and (max-width: 640px) {
 	.centrado{
-		margin: auto;
 		width: 60%;
 		height:100%;
 	}
@@ -46,7 +63,6 @@ body {margin: 0;}
 
 @media screen and (max-width: 550px) {
 	.centrado{
-		margin: auto;
 		width: 75%;
 		height:100%;
 	}
@@ -54,7 +70,6 @@ body {margin: 0;}
 
 @media screen and (max-width: 450px) {
 	.centrado{
-		margin: auto;
 		width: 90%;
 		height:100%;
 	}
@@ -65,7 +80,7 @@ body {margin: 0;}
 		width: 100%;
 		height:100%;
 	}
-}
+}*/
 /*
 ---------------------------------------------------------------------------------------------------------
 RESPONSIVE BAR
